# overlord

./: .gitignore  README.md  justfile  pyproject.toml
src/overlord/: __init__.py  agent.py  cli.py  configuration.py
src/overlord/middlewares/: conversation.py
src/overlord/models/: __init__.py  moonshot.py
src/overlord/patterns/: ralph_mode.py
src/overlord/prompt/: __init__.py  skills.py
src/overlord/rag/: __init__.py
src/overlord/tools/: run_cmd.py
src/overlord/utils/: adjectives.txt  archives.py  avatar.py  debounce.py  extract.py  naming.py
test_workspace/.qdrant_data/collection/docs/: storage.sqlite
tests/: conftest.py  test_agent.py  test_configuration.py  test_rag.py  test_sample.py  test_utils_avatar.py  test_utils_naming.py
workspace-template/.overlord/: IDENTITY.md  SOUL.md  USER.md  config.yaml
workspace-template/.overlord/skills/find-skills/: SKILL.md
workspace-template/.overlord/skills/python/initialize-python-project/: SKILL.md
